5.0b3 -> 5.0b4:
    - rse: fix parsing of the table key in RPM Lua function rpm.macros()
    - rse: add an RPM Lua function rpm.load() for loading external Lua scripts
    - rse: output "Fetching(SourceX): <url>" to clearly indicate that something is fetched remotely
    - rse: try to download missing source files from remote location only if %{_Rxxxx} is really defined
    - jbj: permit rpm -q --qf '%{track}\n' --specsrpm foo.spec queries.
    - jbj: fix: supply additional indentation for forced array[1] with --yaml.

5.0b2 -> 5.0b3:
    - afb: make find-lang.sh work with sed that doesn't have \+ in regexps.
    - afb: make sure to dereference symlinks for the python library paths.
    - jbj: fix: permit -bt on specfiles w/o %track, remove an assertion.
    - rse: fix paths to stringbuf.[ch]
    - pixel: fix http://qa.mandriva.com/show_bug.cgi?id=27417.
    - jbj: expedient fix for http://qa.mandriva.com/show_bug.cgi?id=31680.
    - jbj: functional rpmbuild -bt foo.spec (if %track is present in foo.spec).
    - jbj: fix: insure that %{name} is expanded correctly in srpm paths.
    - jbj: using tagValue() rather than tagGenerate() permits changing the tagno
	to & from arbitrary transparent. likely more needs doing.
    - jbj: reimplement %track as an arbitrary section.
    - jbj: generalize tagStore to keep track of arbitrary tag name/content.
    - jbj: move stringbuf lib -> rpmio for use by tagStore.
    - jbj: preliminaries for %foo arbitrary section parsing (not added yet).
    - jbj: start using rpmParseState typedef rather than int.
    - jbj: fix: explicitly add mkdir -p to spec_install_pre.
    - jbj: explicitly compare against PART_NONE, avoid RPMRC_FOO collisions.
    - jbj: fold in patch-as-plain-macro changes.
    - jbj: fix some minor memory leaks.
    - jbj: XAR magic is detected when reading packages, --xar is superfluous.
    - jbj: eliminate development construction scaffholding.

5.0b1 -> 5.0b2: