@@ -1,4 +1,5 @@
 5.0b3 -> 5.0b4:
+    - rse: add scripts/lua-dump.lua, a recursive dumper for Lua data structures
     - rse: fix parsing of the table key in RPM Lua function rpm.macros()
     - rse: add an RPM Lua function rpm.load() for loading external Lua scripts
     - rse: output "Fetching(SourceX): <url>" to clearly indicate that something is fetched remotely
